--- a/rfidattendance/css/header.css
+++ b/rfidattendance/css/header.css
@@ -144,22 +144,20 @@ span.psw {
 .modal-body select,
 .modal-body input[type="password"] {
   font-family: Georgia, "Times New Roman", Times, serif;
-  background: rgba(255,255,255,.1);
   border: none;
   border-radius: 4px;
   font-size: 14px;
-  margin: 0;
   outline: 0;
   padding: 10px;
   width: 100%;
   box-sizing: border-box; 
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box; 
-  background-color: #e8eeef;
+  -moz-box-sizing: border-box;
+  background: #e8eeef;
   color: #000;
   -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-  margin-bottom: 30px;
+  margin: 0 0 30px;
   border: 1px solid #e8eeef;
 }
 .close {
