--- a/rfidattendance/css/login.css
+++ b/rfidattendance/css/login.css
@@ -45,8 +45,8 @@ h1{
   padding: 15px;
   color: #FFFFFF;
   font-size: 15px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
   border-radius: 0 25px;
 }
