--- a/rfidattendance/css/userslog.css
+++ b/rfidattendance/css/userslog.css
@@ -56,7 +56,6 @@ section {
   display: block;
   padding: 8px;
   color: #FFF;
-  margin: 0 auto;
   background: #388994;
   font-size: 15px;
   text-align: center;
@@ -64,7 +63,7 @@ section {
   width: 100%;
   border: 1px solid #388994;
   border-width: 1px 1px 3px;
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
 }
 .modal-content input[type="submit"]:hover,
 .form-style-5 button:hover {
