--- a/rfidattendance/css/Users.css
+++ b/rfidattendance/css/Users.css
@@ -1,4 +1,4 @@
-h1 {
+h1{
     font-size: 28px !important;
     color: #000;
     text-transform: uppercase;
@@ -7,8 +7,7 @@ h1 {
     text-align: center;
     margin-bottom: 15px;
 }
-
-th {
+th{
     padding: 15px;
     text-align: center !important;
     font-weight: 500;
@@ -16,46 +15,39 @@ th {
     color: #000;
     text-transform: uppercase;
     border: none !important;
-    background-color: rgba(255, 255, 255, 0.3) !important;
+    background-color: rgba(255,255,255,0.3) !important;
 }
-
-td {
+td{
     padding: 15px;
     text-align: center;
     font-weight: 300;
     font-size: 14px;
     color: #fff;
-    border-bottom: solid 2px rgba(255, 255, 255, 0.1);
+    border-bottom: solid 2px rgba(255,255,255,0.1);
 }
-
-section {
+section{
     margin: 50px;
 }
 
 ::-webkit-scrollbar {
     width: 6px;
 }
-
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
-
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 section {
-    overflow-x: hidden;
+    overflow-x:hidden;
 }
-
 .slideInRight {
     animation-name: slideInRight;
 }
-
 .slideInDown {
     animation-name: slideInDown;
 }
-
 .animated {
     animation-duration: 1s;
     animation-fill-mode: both;
@@ -71,7 +63,6 @@ section {
         transform: translate3d(0, 0, 0);
     }
 }
-
 @keyframes slideInDown {
     from {
         transform: translate3d(0, 100%, 0);
@@ -84,20 +75,17 @@ section {
 }
 
 @media screen and (max-width: 900px) {
-    section {
+    section{
         margin: 10px;
     }
-
-    th {
+    th{
         padding: 8px 2px;
         font-size: 11px;
     }
-
-    td {
+    td{
         padding: 8px;
         font-size: 10px;
     }
-
     h1 {
         font-size: 18px !important;
     }
