--- a/rfidattendance/css/header.css
+++ b/rfidattendance/css/header.css
@@ -3,14 +3,13 @@
     box-sizing: border-box;
 }
 
-body {
+body{
     background: -webkit-linear-gradient(left, #0e251f, #21a0ab);
     background: linear-gradient(to right, #23555c, #21a0ab);
     font-family: 'Roboto', sans-serif;
     margin: 0;
     font-size: 15px;
 }
-
 header, main {
     width: 100%;
     display: block;
@@ -22,7 +21,6 @@ header, main {
     width: 100%;
     height: 90px;
 }
-
 .logo a {
     text-decoration: none;
     font-family: Luminari, fantasy;
@@ -33,6 +31,11 @@ header, main {
     vertical-align: middle;
     line-height: 100px;
     display: block;
+}
+
+#navbar {
+    overflow: hidden;
+    background-color: #333;
 }
 
 #navbar a {
@@ -77,21 +80,15 @@ header, main {
 .topnav .icon {
     display: none;
 }
-
 @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-
+    .topnav a:not(:first-child) {display: none;}
     .topnav a.icon {
         float: right;
         display: block;
     }
-
     .header {
         height: 80px;
     }
-
     .logo a {
         font-size: 27px;
         line-height: 80px;
@@ -99,41 +96,37 @@ header, main {
 }
 
 @media screen and (max-width: 600px) {
-
+    .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
     }
-
     .topnav.responsive a {
         float: none;
         display: block;
         text-align: left;
     }
-
+    .modalss-content {
+        width: 90% !important;
+    }
 }
+tbody tr:nth-child(even){background-color: #388994;}
+tbody tr:nth-child(odd){background-color: #3f9aa6;}
 
-tbody tr:nth-child(even) {
-    background-color: #388994;
-}
-
-tbody tr:nth-child(odd) {
-    background-color: #3f9aa6;
-}
-
-tbody tr:hover {
-    opacity: 0.8;
-}
+tbody tr:hover {opacity: 0.8;}
 
 h3 {
     padding: 15px;
+}
+span.psw {
+    float: right;
+    padding-top: 16px;
 }
 
 .bootbox-body {
     color: #fff !important;
 }
-
 .modal-header, .modal-footer {
     background-color: #388994 !important;
     border: none !important;
@@ -151,23 +144,24 @@ h3 {
 .modal-body select,
 .modal-body input[type="password"] {
     font-family: Georgia, "Times New Roman", Times, serif;
+    background: rgba(255,255,255,.1);
     border: none;
     border-radius: 4px;
     font-size: 14px;
+    margin: 0;
     outline: 0;
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    background: #e8eeef;
+    background-color: #e8eeef;
     color: #000;
-    -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-    margin: 0 0 30px;
+    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+    margin-bottom: 30px;
     border: 1px solid #e8eeef;
 }
-
 .close {
     position: absolute;
     right: 15px;
@@ -190,23 +184,14 @@ h3 {
 }
 
 @-webkit-keyframes animatezoom {
-    from {
-        -webkit-transform: scale(0)
-    }
-    to {
-        -webkit-transform: scale(1)
-    }
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
 }
 
 @keyframes animatezoom {
-    from {
-        transform: scale(0)
-    }
-    to {
-        transform: scale(1)
-    }
+    from {transform: scale(0)}
+    to {transform: scale(1)}
 }
-
 .up_info1, .up_info2 {
     display: none;
     width: 270px;
