--- a/rfidattendance/css/login.css
+++ b/rfidattendance/css/login.css
@@ -1,4 +1,4 @@
-h1 {
+h1{
     font-size: 28px !important;
     color: #000;
     font-weight: 300;
@@ -7,13 +7,11 @@ h1 {
     margin: 15px;
     padding-top: 20px;
 }
-
 .login-page {
     width: 360px;
     padding: 30px 0 0;
     margin: auto;
 }
-
 .form {
     position: relative;
     z-index: 1;
@@ -25,7 +23,6 @@ h1 {
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 10px 0 rgba(0, 0, 0, 0.1);
     border-radius: 0 25px;
 }
-
 .form input {
     font-family: "Roboto", sans-serif;
     outline: 0;
@@ -38,7 +35,6 @@ h1 {
     font-size: 15px;
     border-radius: 0 25px;
 }
-
 .form button {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
@@ -49,61 +45,55 @@ h1 {
     padding: 15px;
     color: #FFFFFF;
     font-size: 15px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
     cursor: pointer;
     border-radius: 0 25px;
 }
-
-.form button:hover, .form button:active, .form button:focus {
+.form button:hover,.form button:active,.form button:focus {
     background: #067979;
 }
-
 .form .message {
     margin: 15px 0 0;
     color: #fff;
     font-size: 13px;
     font-family: sans-serif;
 }
-
 .form .message a {
     color: #000;
     font-size: 14px;
     text-decoration: none;
     font-family: sans-serif;
 }
-
 .form .alert {
     border-radius: 25px 0 25px;
 }
-
 .form .alert1 {
     display: none;
     width: 100%;
     text-align: center;
 }
-
-#reset {
+#reset{
     display: none;
 }
-
 .form .reset-form {
     display: none;
 }
-
 .container {
     position: relative;
     z-index: 1;
     max-width: 300px;
     margin: 0 auto;
 }
-
 .container:before, .container:after {
     content: "";
     display: block;
     clear: both;
 }
-
+.container .info {
+    margin: 50px auto;
+    text-align: center;
+}
 .container .info h1 {
     margin: 0 0 15px;
     padding: 0;
@@ -111,30 +101,30 @@ h1 {
     font-weight: 300;
     color: #1a1a1a;
 }
-
 .container .info span {
     color: #4d4d4d;
     font-size: 12px;
 }
-
 .container .info span a {
     color: #000000;
     text-decoration: none;
 }
-
+.container .info span .fa {
+    color: #EF3B3A;
+}
+.slideInRight {
+    animation-name: slideInRight;
+}
 .slideInDown {
     animation-name: slideInDown;
 }
-
 .animated {
     animation-duration: 1s;
     animation-fill-mode: both;
 }
-
 .modal-content {
     background: rgba(0, 0, 0, 0.05);
 }
-
 @keyframes slideInRight {
     from {
         transform: translate3d(100%, 0, 0);
@@ -145,7 +135,6 @@ h1 {
         transform: translate3d(0, 0, 0);
     }
 }
-
 @keyframes slideInDown {
     from {
         transform: translate3d(0, 100%, 0);
@@ -158,22 +147,19 @@ h1 {
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width : 480px) {
     .login-page {
         width: 100%;
         font-size: 1em;
     }
 }
-
 @media screen and (max-width: 900px) {
-    section {
+    section{
         margin: 10px;
     }
-
     h1 {
         font-size: 18px !important;;
     }
-
     .form input, .form button {
         margin: 0 0 10px;
         padding: 12px;
