--- a/rfidattendance/css/userslog.css
+++ b/rfidattendance/css/userslog.css
@@ -1,4 +1,4 @@
-h1 {
+h1{
     font-size: 28px !important;
     color: #000;
     text-transform: uppercase;
@@ -7,8 +7,7 @@ h1 {
     text-align: center;
     margin-bottom: 15px;
 }
-
-th {
+th{
     padding: 15px;
     text-align: center !important;
     font-weight: 500;
@@ -16,47 +15,40 @@ th {
     color: #000;
     text-transform: uppercase;
     border: none !important;
-    background-color: rgba(255, 255, 255, 0.3) !important;
+    background-color: rgba(255,255,255,0.3) !important;
 }
-
-td {
+td{
     padding: 15px;
     text-align: center;
     font-weight: 300;
     font-size: 14px;
     color: #fff;
-    border-bottom: solid 2px rgba(255, 255, 255, 0.1);
+    border-bottom: solid 2px rgba(255,255,255,0.1);
 }
-
 .error {
     color: red;
     text-align: center;
 }
-
 section {
     margin: 0px 50px;
-    overflow-x: hidden;
+    overflow-x:hidden;
 }
 
 ::-webkit-scrollbar {
     width: 6px;
 }
-
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
-
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
-
-.form-style-5 {
+.form-style-5{
     display: block;
     margin: 0px auto;
     max-width: 250px;
     padding: 5px;
 }
-
 .modal-content input[type="submit"],
 .form-style-5 button {
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -64,6 +56,7 @@ section {
     display: block;
     padding: 8px;
     color: #FFF;
+    margin: 0 auto;
     background: #388994;
     font-size: 15px;
     text-align: center;
@@ -71,22 +64,18 @@ section {
     width: 100%;
     border: 1px solid #388994;
     border-width: 1px 1px 3px;
-    margin: 0 auto 10px;
+    margin-bottom: 10px;
 }
-
 .modal-content input[type="submit"]:hover,
 .form-style-5 button:hover {
     background: #317881;
 }
-
 .panel {
     border-color: #388994 !important;
 }
-
 .panel-heading {
     background-color: #388994 !important;
 }
-
 .panel-body {
     background-color: #46abb9 !important;
 }
@@ -94,11 +83,9 @@ section {
 .slideInRight {
     animation-name: slideInRight;
 }
-
 .slideInDown {
     animation-name: slideInDown;
 }
-
 .animated {
     animation-duration: 1s;
     animation-fill-mode: both;
@@ -110,7 +97,6 @@ section {
     right: 10%;
     margin-top: -25px;
 }
-
 .time input {
     position: absolute !important;
     clip: rect(0, 0, 0, 0);
@@ -154,16 +140,13 @@ section {
     section {
         margin: 0px 4px;
     }
-
     h1 {
         font-size: 19px !important;
     }
-
     th {
         font-size: 11px;
         padding: 5px 2px;
     }
-
     .form-style-5 button {
         padding: 5px;
         font-size: 14px;
@@ -180,7 +163,6 @@ section {
         transform: translate3d(0, 0, 0);
     }
 }
-
 @keyframes slideInDown {
     from {
         transform: translate3d(0, 100%, 0);
